2004-05-30  Giovanni Corriga <valkadesh@libero.it>

	* src/rbgconf.c: Fix a wrong definition of g_id_call.

2004-05-30  Pascal Terjan <pterjan@linuxfr.org>

	* src/rbgconf.h: Add "extern" definition to the g_id_call.

2004-04-08  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>

	* src/rbgconf-client.c: Fix a RangeError of GConf::Client#notify_remove.

2004-03-21  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>

	* src/rbgconf-entry.c, rbgconf-client.c: Fix a segfault of 
	GConf::Client#notify_add when GConf::Client#unset is called.

2004-03-14  Kazuhiro NISHIYAMA <zn@mbf.nifty.com>

	* src/rbgconf-util.c: Fix using array values, integer values.
	* tests/unittest.rb: Added. 
	
2003-09-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgconf-client.c: Apply enums/flags.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                
	* extconf.rb: Exit with 1 when the package is not found.

2003-08-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgconf-entry.c: Fix a bug [744158]
   	* extconf.rb: Code cleanup.

2003-07-22  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgconf-util.h: Move CBOOL2RVAL to Ruby/GLib.

2003-06-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgconf-client.c, rbgconf_changeset.c: 
	Replace rb_f_lambda() to G_BLOCK_PROC() for ruby-1.8.x.

2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb position changes.

2003-05-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgconf-metainfo.[ch]: Fixed compile error.

2003-03-25  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: cygwin support

2003-02-14  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Use ../mkmf-gnome2.rb

2003-01-04  Masao Mutoh <mutoh@highway.ne.jp>

	* README, COPYING.LIB: Change license term from "the GNU LIBRARY General Public
	License version 2." to "the GNU LESSER GENERAL PUBLIC LICENSE Version 2.1.".

2003-01-03  Nikolai :: lone-star :: Weibull <lone-star@home.se>
